// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildAssessmentPrompt — accepted submission snapshot > renders an accepted submission with full context 1`] = `
"## Problem
- Slug: two-sum
- Title: Two Sum
- Difficulty: medium
- Topics: array, hash-table

### Statement
Find two numbers that add up to target.

## Submission
- Status: accepted
- Language: TypeScript
- Runtime: 42 ms
- Memory: 18 MB
- Tests passed: 57 of 57

### Code
\`\`\`TypeScript
function twoSum(nums, target) { /* ... */ }
\`\`\`

## Timing
- Elapsed: 600 seconds (10 min)
- Target: 2100 seconds (35 min)
- Timer used: yes

## Deterministic decision
- Rating: good
- Reason code: leetcode-good
- Confidence: 0.80
- Lock reason: none

## Practice context
- Session kind: recall-review
- Submission source: leetcode-watcher
- Previous rating: good
- Best previous time: 1200 seconds (20 min)
- Latest attempt: rating=good, isCorrect=true, elapsed=1200s

## Your task
Recommend an FSRS rating for this attempt. Respond with JSON only."
`;

exports[`buildAssessmentPrompt — no-submission snapshot > omits code and diagnostics blocks for manual-overlay path 1`] = `
"## Problem
- Slug: two-sum
- Title: Two Sum
- Difficulty: medium
- Topics: array, hash-table

### Statement
Find two numbers in the array that add up to the target.

## Submission
- Status: no-submission (manual review without LeetCode result)

## Timing
- Elapsed: 600 seconds (10 min)
- Target: 2100 seconds (35 min)
- Timer used: yes

## Deterministic decision
- Rating: good
- Reason code: leetcode-good
- Confidence: 0.80
- Lock reason: none

## Practice context
- Session kind: recall-review
- Submission source: leetcode-watcher
- Previous rating: good
- Best previous time: 1200 seconds (20 min)
- Latest attempt: rating=good, isCorrect=true, elapsed=1200s

## Your task
Recommend an FSRS rating for this attempt. Respond with JSON only."
`;

exports[`buildAssessmentPrompt — wrong-answer snapshot > renders a failed submission with diagnostics 1`] = `
"## Problem
- Slug: two-sum
- Title: Two Sum
- Difficulty: medium
- Topics: array, hash-table

### Statement
Find two numbers in the array that add up to the target.

## Submission
- Status: failed
- Language: TypeScript
- Tests passed: 10 of 11

### Code
\`\`\`TypeScript
function twoSum(nums, target) { return [] }
\`\`\`

### Failure diagnostics
- Failing testcase: [2,7,11,15]
9
- Expected output: [0,1]
- Actual output: []

## Timing
- Elapsed: 900 seconds (15 min)
- Target: 2100 seconds (35 min)
- Timer used: yes

## Deterministic decision
- Rating: again
- Reason code: failed
- Confidence: 1.00
- Lock reason: failed

## Practice context
- Session kind: recall-review
- Submission source: leetcode-watcher
- Previous rating: good
- Best previous time: 1200 seconds (20 min)
- Latest attempt: rating=good, isCorrect=true, elapsed=1200s

## Your task
Recommend an FSRS rating for this attempt. Respond with JSON only."
`;
